Updated the ButuanPrime Dashboard, Property.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,10 +8,13 @@
 // Variables
 @import "variables";
 
-// Bootstrap
+// Bootstrap 3
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+// Bootstrap 4
+// import "node_modules/bootstrap/scss/bootstrap";
 
 // Modifications
 @import "modifiers";
 @import "helpers";
 @import "styles";
+
